--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "license": "MIT",
   "dependencies": {
     "express": "4.17.1",
+    "express-formidable": "^1.2.0",
     "express-handlebars": "3.1.0",
+    "formidable": "^1.2.2",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7"
   }
 }
